--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
+    "nocache": "^3.0.4",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
